--- a/Formal Wear/Base.lproj/Main.storyboard
+++ b/Formal Wear/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="1ho-vf-4OY">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14A379a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="1ho-vf-4OY">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -25,7 +25,6 @@
         <!--View Controller-->
         <scene sceneID="zxm-wv-E8v">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="JR5-Sb-gfA" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="4jL-m5-k5F" customClass="ViewController" customModule="Formal_Wear" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ILt-ba-mjm"/>
@@ -45,6 +44,7 @@
                         <outlet property="view" destination="Pyu-Mv-ag7" id="IyV-6m-Rhj"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JR5-Sb-gfA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1074.6666666666667" y="329.44"/>
         </scene>
@@ -104,44 +104,10 @@
             </objects>
             <point key="canvasLocation" x="-9" y="897"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="aQZ-Jt-omc">
-            <objects>
-                <viewController id="eYV-qS-O8B" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="gfe-Jo-c3a"/>
-                        <viewControllerLayoutGuide type="bottom" id="Fi4-tM-MO3"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="2Z0-5j-5Cj" customClass="File">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vbr-V6-BPf" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="uy5-fC-hEo">
-            <objects>
-                <viewController id="Ceb-aK-U3p" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="pCk-Ln-Phx"/>
-                        <viewControllerLayoutGuide type="bottom" id="UV9-qU-AB4"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="pBB-EH-nmP">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ejb-zQ-qsp" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-        </scene>
-        <!--View Controller-->
+        <!--Add Dress View Controller-->
         <scene sceneID="hdN-48-xJq">
             <objects>
-                <viewController id="NXC-FM-3CK" sceneMemberID="viewController">
+                <viewController id="NXC-FM-3CK" customClass="AddDressViewController" customModule="Formal_Wear" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="MZ0-Jz-VNl"/>
                         <viewControllerLayoutGuide type="bottom" id="qjy-xj-N4W"/>
@@ -153,40 +119,6 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uz1-Gg-D2R" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="nHc-m2-obu">
-            <objects>
-                <viewController id="ArW-V1-4aM" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Js9-RG-sgj"/>
-                        <viewControllerLayoutGuide type="bottom" id="0eB-27-ecz"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="OxO-h0-I7C">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9Kx-vq-kcT" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="OUL-1j-wff">
-            <objects>
-                <viewController id="vee-Qr-7gN" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="lfM-aH-XUt"/>
-                        <viewControllerLayoutGuide type="bottom" id="5Sn-1Y-vzp"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="wbK-7a-miI" customClass="ADBannerView">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="HhA-ds-jvn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
