--- a/Formal Wear/Base.lproj/Main.storyboard
+++ b/Formal Wear/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="g1r-Ru-Tvy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14A379a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="g1r-Ru-Tvy">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -19,7 +19,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="Lsd-FA-CGG"/>
                     <connections>
-                        <segue destination="NXC-FM-3CK" kind="push" id="7WI-GK-v3o"/>
+                        <segue destination="NXC-FM-3CK" kind="push" identifier="AddDress" id="7WI-GK-v3o"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
@@ -151,10 +151,25 @@
                                     <action selector="openPhotoLibrary:" destination="NXC-FM-3CK" eventType="touchUpInside" id="rht-eN-XO3"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8tU-p6-f6M">
+                                <rect key="frame" x="143" y="363" width="34" height="30"/>
+                                <state key="normal" title="Save">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="saveButtonHit:" destination="NXC-FM-3CK" eventType="touchUpInside" id="pQA-fb-Wvf"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="eaY-VR-hsj"/>
+                    <connections>
+                        <outlet property="nameField" destination="MYY-31-OuG" id="Rut-dd-sFQ"/>
+                        <outlet property="priceField" destination="4LU-sz-bHU" id="cm7-ld-dAU"/>
+                        <outlet property="storeField" destination="thU-29-reG" id="oti-Iy-r5O"/>
+                        <segue destination="vXZ-lx-hvc" kind="push" identifier="listViewController" id="Xvb-BD-qba"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uz1-Gg-D2R" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -184,4 +199,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="Xvb-BD-qba"/>
+    </inferredMetricsTieBreakers>
 </document>
